# LambdaCpp

./: .gitignore  CMakeLists.txt  README.md  grammar.txt  lambda-syntax.hpp  tree.hpp
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/include/gtest/: gtest-matchers.h.func-sort-c.html  gtest-matchers.h.func.html  gtest-matchers.h.gcov.html  gtest-message.h.func-sort-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest-test-part.h.func-sort-c.html  gtest-test-part.h.func.html  gtest-test-part.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/gtest/internal/: gtest-death-test-internal.h.func-sort-c.html  gtest-death-test-internal.h.func.html  gtest-death-test-internal.h.gcov.html  gtest-filepath.h.func-sort-c.html  gtest-filepath.h.func.html  gtest-filepath.h.gcov.html  gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-param-util.h.func-sort-c.html  gtest-param-util.h.func.html  gtest-param-util.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  gtest-type-util.h.func-sort-c.html  gtest-type-util.h.func.html  gtest-type-util.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/: gtest-death-test.cc.func-sort-c.html  gtest-death-test.cc.func.html  gtest-death-test.cc.gcov.html  gtest-filepath.cc.func-sort-c.html  gtest-filepath.cc.func.html  gtest-filepath.cc.gcov.html  gtest-internal-inl.h.func-sort-c.html  gtest-internal-inl.h.func.html  gtest-internal-inl.h.gcov.html  gtest-matchers.cc.func-sort-c.html  gtest-matchers.cc.func.html  gtest-matchers.cc.gcov.html  gtest-port.cc.func-sort-c.html  gtest-port.cc.func.html  gtest-port.cc.gcov.html  gtest-printers.cc.func-sort-c.html  gtest-printers.cc.func.html  gtest-printers.cc.gcov.html  gtest-test-part.cc.func-sort-c.html  gtest-test-part.cc.func.html  gtest-test-part.cc.gcov.html  gtest-typed-test.cc.func-sort-c.html  gtest-typed-test.cc.func.html  gtest-typed-test.cc.gcov.html  gtest.cc.func-sort-c.html  gtest.cc.func.html  gtest.cc.gcov.html  gtest_main.cc.func-sort-c.html  gtest_main.cc.func.html  gtest_main.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  repl.cpp.func-sort-c.html  repl.cpp.func.html  repl.cpp.gcov.html
coverage/src/lib/: church-encoding.cpp.func-sort-c.html  church-encoding.cpp.func.html  church-encoding.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lambda-exceptions.hpp.func-sort-c.html  lambda-exceptions.hpp.func.html  lambda-exceptions.hpp.gcov.html  lambda-struct.cpp.func-sort-c.html  lambda-struct.cpp.func.html  lambda-struct.cpp.gcov.html  lambda-struct.hpp.func-sort-c.html  lambda-struct.hpp.func.html  lambda-struct.hpp.gcov.html  lambda-syntax.hpp.func-sort-c.html  lambda-syntax.hpp.func.html  lambda-syntax.hpp.gcov.html  program.hpp.func-sort-c.html  program.hpp.func.html  program.hpp.gcov.html  tokenizer.hpp.func-sort-c.html  tokenizer.hpp.func.html  tokenizer.hpp.gcov.html
coverage/test/: church-encoding.cpp.func-sort-c.html  church-encoding.cpp.func.html  church-encoding.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lambda-struct.cpp.func-sort-c.html  lambda-struct.cpp.func.html  lambda-struct.cpp.gcov.html  lambda-syntax.cpp.func-sort-c.html  lambda-syntax.cpp.func.html  lambda-syntax.cpp.gcov.html  tokenizer.cpp.func-sort-c.html  tokenizer.cpp.func.html  tokenizer.cpp.gcov.html
coverage/usr/include/c++/9/: index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  iomanip.func-sort-c.html  iomanip.func.html  iomanip.gcov.html  limits.func-sort-c.html  limits.func.html  limits.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  string_view.func-sort-c.html  string_view.func.html  string_view.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  typeinfo.func-sort-c.html  typeinfo.func.html  typeinfo.gcov.html  utility.func-sort-c.html  utility.func.html  utility.gcov.html
coverage/usr/include/c++/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocated_ptr.h.func-sort-c.html  allocated_ptr.h.func.html  allocated_ptr.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  index.html  (+97 more)
headers/: lambda-exceptions.hpp  lambda-struct.hpp  lambda-syntax.hpp  reduction.hpp  tokenizer.hpp  utils.hpp
src/: repl.cpp
src/headers/: church-encoding.hpp  lambda-exceptions.hpp  lambda-struct.hpp  lambda-syntax.hpp  program.hpp  tokenizer.hpp
src/lib/: church-encoding.cpp  church-encoding.hpp  lambda-exceptions.hpp  lambda-struct.cpp  lambda-struct.hpp  lambda-syntax.hpp  program.hpp  tokenizer.hpp
test/: church-encoding.cpp  lambda-reduction.cpp  lambda-struct.cpp  lambda-syntax.cpp  tokenizer.cpp
tests/: test_lambda_syntax_hpp.cpp
(+72 files in other folders)
